# smart-restore

./: README.md  pyproject.toml
.github/workflows/: test.yml
smart_restore/: __init__.py  database.py  progress.py  reader.py  sync.py  utility.py  writer.py
tests/: test_basic.py
